manual updated mcdiff units in barn and lorentzf=1 option (instead of 100), mcphas.xyt phase indexing prefereable by structures in mcphas.tst introduced to improve phasediagram plot

--- a/doc/cfield.tex
+++ b/doc/cfield.tex
@@ -119,7 +119,7 @@ Dx2=0.1
 Dy2=0
 Dz2=0.4
 # the temperature in Kelvin
-T= 10
+TEMP= 10
 # if you want you can apply a magnetic field in Tesla
 Bx=0
 By=0
