--- a/doc/mcphas.tex
+++ b/doc/mcphas.tex
@@ -547,7 +547,7 @@ the verbose mode enables the following features:
 				    when a structure with smaller free energy 
 				    has been stabilised
   \end{itemize}
-\item[\prg mcphasit\index{mcphas}] to start mcphase in commandline mode ()only) without opening any window
+\item[\prg mcphasit\index{mcphas}] to start mcphase in commandline mode without opening any window
 \end{description}
 
 \vspace{1cm}
