pointc improved adding B00 and L00 parameters

--- a/doc/cfparconventions.tex
+++ b/doc/cfparconventions.tex
@@ -18,14 +18,14 @@ prefactors $p_{lm}$. The Stevens crystal field Hamiltonian is thus
 field parameter, because the factorisation into an intrinsic parameter $A_{lm}$ and the expectation value of
 the radial wavefunction $\langle r^l \rangle$ is derived from the point charge model and is not generally
 valid. Alternatively, the product $B_l^m = A_{lm} \langle r^l \rangle \langle J || \theta_l || J \rangle$ is
-also commonly used, particularly in the neutron scattering literature.
+also commonly used, particularly in the neutron scattering literature. $ \theta_l= \langle J || \theta_l || J \rangle$ are the Stevens factors:  for $l=0,2,4,6$ these correspond to the number of electrons in the unfilled shell $\nu,\alpha_J,\beta_J,\gamma_J$, respectively.
 
 Wybourne~\cite{wybourne65} and subsequent co-authors on the other hand chose to use the tensor operators 
 $\hat{C}_{lm}$ which transform in the same way as the functions $C_{lm}(\theta,\phi) = \sqrt{4\pi / (2l+1)}
 Y_{lm}(\theta,\phi)$, where $Y_{lm}(\theta,\phi)$ are the spherical harmonic functions, to describe the crystal
 field. Thus the angular-dependent part of the crystal field matrix elements used by Wybourne differed from
-that of Stevens by the factor $\lambda_{k0} = p_{k0} \sqrt{4\pi / (2l+1)}$ and
- $\lambda_{lm} = p_{lm} \sqrt{8\pi / (2l+1)}$ for $q\neq 0$. The crystal field Hamiltonian used by Wybourne is
+that of Stevens by the factor $\lambda_{l0} = p_{l0} \sqrt{4\pi / (2l+1)}$ and
+ $\lambda_{lm} = p_{lm} \sqrt{8\pi / (2l+1)}$ for $l\neq 0$. The crystal field Hamiltonian used by Wybourne is
 thus (in our notation)
 
 \[
@@ -142,6 +142,7 @@ are given in table~\ref{tab:wytostev}.}\label{cfpartypes}
           & \multicolumn{7}{|c}{$|m|$} \\  \cline{2-8}
       $l$ & $0$ & $1$ & $2$ & $3$ & $4$ & $5$ & $6$ \\
       \hline \hline
+      $0$ & $1$               &                               &                                  & & & & \\
       $2$ & $\frac{1}{2}$  & $\sqrt{6}$             & $\frac{1}{2}\sqrt{6}$  & & & & \\
       $4$ & $\frac{1}{8}$  & $\frac{1}{2}\sqrt{5}$  & $\frac{1}{4}\sqrt{10}$   & $\frac{1}{2}\sqrt{35}$ & $\frac{1}{8}\sqrt{70}$   & & \\
       $6$ & $\frac{1}{16}$ & $\frac{1}{8}\sqrt{42}$ & $\frac{1}{16}\sqrt{105}$ & $\frac{1}{8}\sqrt{105}$ & $\frac{3}{16}\sqrt{14}$ &
@@ -150,7 +151,7 @@ are given in table~\ref{tab:wytostev}.}\label{cfpartypes}
     \end{tabular}
     \caption{\emph{Ratios $\lambda_{lm}$ of the Stevens to the real valued
  Wybourne normalised parameters}.
-$\lambda_{lm} \equiv B_l^m/(\theta_l^mL_l^m)= A_{lm}\langle r^l \rangle / L_l^m$. 
+$\lambda_{lm} \equiv B_l^m/(\theta_lL_l^m)= A_{lm}\langle r^l \rangle / L_l^m$. 
 $ \lambda_{lm}$ are related to the prefactors in the 
 tesseral harmonics (see appendix~\ref{tesseral}) $p_{lm}$ by 
 $\lambda_{l0} =\sqrt{\frac{4\pi}{2l+1}}|p_{l0}|$ and
