update new year

--- a/doc/mcdisp.tex
+++ b/doc/mcdisp.tex
@@ -140,7 +140,7 @@ described in section~\ref{spins}.
 # ...
 #
 # or
-# (iii) a list of Q vectors with (optional) energies of observed excitations to be fitted
+# (iv) a list of Q vectors with (optional) energies of observed excitations to be fitted
 # h k l [E1(meV) E2(meV) ...]
 0.297 0.297 0 11 
 0.311 0.311 0 10 
